test/testdata/functions/missing_4_args_error.lox
fun add(a, b, c, d) {
  print a + b + c + d;
}

add(); // error: add() missing 4 arguments: a, b, c, and d
